--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -57,10 +57,10 @@
 
                 <div class="footer-pay">
                     <div class="footer-title">Мы принимаем:</div>
-                    <a href="#"><img src="assets/images/cards/visa.png" alt=""></a>
-                    <a href="#"><img src="assets/images/cards/master-card.png" alt=""></a>
-                    <a href="#"><img src="assets/images/cards/maestro.png" alt=""></a>
-                    <a href="#"><img src="assets/images/cards/rashet.png" alt=""></a>
+                    <img src="assets/images/cards/visa.png" alt="">
+                    <img src="assets/images/cards/master-card.png" alt="">
+                    <img src="assets/images/cards/maestro.png" alt="">
+                    <img src="assets/images/cards/rashet.png" alt="">
                 </div>
             </div>
         </div>
@@ -68,11 +68,17 @@
             <div class="copyright">
                 &copy; 2017 Международный яхтенный центр (IYC). Все права защищены
             </div>
-            <a href="#">Карта сайта</a>
+            <a href="#" class="footer-bottom__sitemap">Карта сайта</a>
             <div class="developer">
                 Разработка сайта:
-                <img src="assets/images/webcompany-logo.png" alt="">
+                <a href="http://webcompany.by">
+                    <img src="assets/images/webcompany-logo.png" alt="">
+                </a>
             </div>
         </div>
     </div>
 </div><!-- /footer -->
+
+<script src="assets/js/libs.js"></script>
+<script src="assets/js/jquery-scripts.js"></script>
+<script src="assets/js/main.js"></script>
