--- a/src/assets/less/mixins.less
+++ b/src/assets/less/mixins.less
@@ -6,6 +6,12 @@
   height: 100%;
 }
 
+.transform-center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
 .slider-arrows(@width) {
   position: absolute;
   content: "";
@@ -14,5 +20,19 @@
   top: 0;
   bottom: 0;
   transition: @transition;
+}
+
+.overlay-color(@opacity) {
+  background: rgba(34, 51, 64, @opacity);
+}
+
+.orange-wave {
+  position: absolute;
+  content: "";
+  left: -21px;
+  top: 1px;
+  background: url("../images/wave-orange.png");
+  width: 33px;
+  height: 20px;
 }
 
