--- a/src/templates/breadcrumbs.html
+++ b/src/templates/breadcrumbs.html
@@ -1,11 +1,14 @@
 <!-- - - - - - - - - - breadcrumbs - - - - - - - - - -->
 <div class="breadcrumbs">
-    <ul class="breadcrumbs__list clearfix_">
+    <ul class="breadcrumbs__list clearfix">
         <li class="breadcrumbs__item">
-            <a href="" class="breadcrumbs__link">Главная</a>
+            <a href="/" class="breadcrumbs__link">Главная</a>
+        </li>
+        <li class="breadcrumbs__item">
+            <a href="#" class="breadcrumbs__link">Услуги</a>
         </li>
         <li class="breadcrumbs__item active">
-            <span class="breadcrumbs__link">Продукция</span>
+            <span class="breadcrumbs__link">Обучение яхтингу</span>
         </li>
     </ul>
 </div><!-- /breadcrumbs -->
