--- a/src/templates/pagination.html
+++ b/src/templates/pagination.html
@@ -1,29 +1,18 @@
 <!-- - - - - - - - - - pagination - - - - - - - - - -->
-<div class="pagination">
-    <div class="pagination-wrap  clearfix_">
-        <a href="" class="prev-pagination"><span>назад</span></a>
-        <ul class="pagination-list">
-            <li class="pagination-list-el active">
-                <a href="#" class="pagination-list-el__link">1</a>
-            </li>
-            <li class="pagination-list-el">
-                <a href="#" class="pagination-list-el__link">2</a>
-            </li>
-            <li class="pagination-list-el">
-                <a href="#" class="pagination-list-el__link active">3</a>
-            </li>
-            <li class="pagination-list-el">
-                <a href="#" class="pagination-list-el__link pagination-list-el__dotted">
-                    <span>...</span>
-                </a>
-            </li>
-            <li class="pagination-list-el">
-                <a href="#" class="pagination-list-el__link">8</a>
-            </li>
-            <li class="pagination-list-el">
-                <a href="#" class="pagination-list-el__link">9</a>
-            </li>
-        </ul>
-        <a href="" class="next-pagination"><span>вперед</span></a>
-    </div>
-</div><!-- /pagination -->
+<ul class="pagination">
+    <a href="#" class="pagination__prev"></a>
+    <li class="pagination-el">
+        <a href="#" class="pagination-el__link">1</a>
+    </li>
+    <li class="pagination-el">
+        <a href="#" class="pagination-el__link">2</a>
+    </li>
+    <li class="pagination-el  active">
+        <a href="#" class="pagination-el__link">3</a>
+    </li>
+    <li class="pagination-el">
+        <a href="#" class="pagination-el__link">4</a>
+    </li>
+    <a href="#" class="pagination__next"></a>
+</ul>
+<!-- /pagination -->
